# polymarket-bot

./: CMakeLists.txt  LICENSE  README.md  constants.hpp
config/: markets.json
src/: main.cpp
src/crypto/: keccak256.hpp
src/data/: clock_sync.cpp  clock_sync.hpp  feed_manager.cpp  feed_manager.hpp  market_scanner.cpp  market_scanner.hpp  ring_buffer.hpp  tick.hpp
src/execution/: binance_client.cpp  binance_client.hpp  clob_client.cpp  clob_client.hpp  coinbase_client.cpp  coinbase_client.hpp  maker_arm.cpp  maker_arm.hpp  order_state_machine.cpp  order_state_machine.hpp  position_manager.cpp  position_manager.hpp  taker_arm.cpp  taker_arm.hpp
src/infra/: heartbeat.cpp  heartbeat.hpp  logger.cpp  logger.hpp  metrics.cpp  metrics.hpp  rpc_client.cpp  rpc_client.hpp
src/risk/: sizing.hpp  watchdog.cpp  watchdog.hpp
src/signal/: bayesian_engine.cpp  bayesian_engine.hpp  likelihood.cpp  likelihood.hpp  regime.cpp  regime.hpp  shared_state.hpp
src/types/: amount.hpp
src/wallet/: clob_auth.cpp  clob_auth.hpp  eip712.cpp  eip712.hpp  key_manager.cpp  key_manager.hpp  nonce_manager.cpp  nonce_manager.hpp
tools/: encrypt_secrets.py  setup_approvals.py
tools/bt_runner/: main.cpp
tools/tick_recorder/: main.cpp
